RESOLVED FIXED24422
REGRESSION: null-URL crash in FrameLoader setting location.hash on new window
https://bugs.webkit.org/show_bug.cgi?id=24422
Summary REGRESSION: null-URL crash in FrameLoader setting location.hash on new window
Darin Adler
Reported 2009-03-06 06:39:11 PST
The test at http://www.w3schools.com/js/tryit.asp?filename=tryjs_anchor1 triggers a crash inside the loader. I have a test case and fix underway.
Attachments
patch (15.69 KB, patch)
2009-03-06 07:52 PST, Darin Adler
no flags
Darin Adler
Comment 1 2009-03-06 07:52:31 PST
Darin Fisher (:fishd, Google)
Comment 2 2009-03-06 08:23:01 PST
Comment on attachment 28359 [details] patch >+shouldBe("testWindow.location.toString()", "'/'"); // Firefox returns about:blank >+shouldBe("testWindow.location.href", "'/'"); // Firefox returns about:blank >+shouldBe("testWindow.location.protocol", "':'"); // Firefox returns about: >+shouldBe("testWindow.location.host", "''"); // Firefox throws an exception >+shouldBe("testWindow.location.hostname", "''"); // Firefox throws an exception This patch looks good to me. (I verified that all of the URL strings have been completed before the isEmpty checks.) However, I wonder about all of these behavior differences from Firefox. Are those potential compat issues?
Darin Adler
Comment 3 2009-03-06 09:10:10 PST
(In reply to comment #2) > This patch looks good to me. (I verified that all of the URL strings have > been completed before the isEmpty checks.) However, I wonder about all of > these behavior differences from Firefox. Are those potential compat issues? They probably aren't but they might be. That's why I added those comments. We should check the behavior of IE before making any changes. I'd definitely be open to changing this to be closer to the other browsers. And we should check if HTML 5 has anything to say about this.
Alexey Proskuryakov
Comment 4 2009-03-06 09:28:16 PST
> They probably aren't but they might be. That's why I added those comments. See bug 21597, currently in review queue.
Darin Adler
Comment 5 2009-03-06 09:30:38 PST
Although I landed this patch, I just noticed that while the regression test works in Safari, in DumpRenderTree it's just FAIL, FAIL, FAIL, so I need to resolve that.
Darin Adler
Comment 6 2009-03-06 09:30:55 PST
Comment on attachment 28359 [details] patch Clearing review flag since this was landed.
Note You need to log in before you can comment on or make changes to this bug.